grammar.js
    document: ($) => repeat($.top_level_item),

    statement_list: ($) => seq($.statement, repeat(seq(";", $.statement)), optional(";")),

    line_comment: ($) => token(seq("//", /[^\n]*/)),

    block_comment: ($) =>
      seq(
        "/*",
        repeat(
          choice(
            /[^/*]+/,
            /\/[^*]/,
            /\*[^/]/,
            $.block_comment,
          ),
        ),
        "*/",
      ),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attribute_list)),
        "fn",
        field("name", choice($.lower_identifier, $.upper_identifier)),
        optional(field("type_parameters", $.type_parameter_list)),
        field("parameters", $.parameter_clause),
        optional(field("capabilities", $.capability_list)),
        optional(field("return_type", $.return_type)),
        optional(field("body", $.block)),
      ),

    slot_type: ($) => choice($.inline_type_declaration, $.type_expression),

    binding_statement: ($) =>
      seq(
        "let",
        field("pattern", $.binding_pattern),
        optional(seq(":", field("type", $.slot_type))),
        "=",
        field("value", $.expression),
      ),

    compound_update_statement: ($) =>
      seq(field("name", $.lower_identifier), "with=", field("value", $.update_body)),

    field_assignment_statement: ($) =>
      seq(field("target", $.field_assignment_target), "=", field("value", $.expression)),

    field_assignment_target: ($) => $.field_expression,

    return_statement: ($) => seq("return", optional($.expression)),

    parameter_clause: ($) =>
      seq(
        "(",
        optional($.parameter_list),
        optional($.keyword_parameter_section),
        ")",
      ),

    parameter_list: ($) => seq(commaSep1($.parameter), optional(",")),

    keyword_parameter_section: ($) =>
      seq(";", optional(seq(commaSep1($.keyword_parameter), optional(",")))),

    parameter: ($) => seq(field("pattern", $.binding_pattern), ":", field("type", $.slot_type)),

    keyword_parameter: ($) =>
      seq(
        field("name", $.lower_identifier),
        ":",
        field("type", $.slot_type),
        optional(seq("=", field("default", $.expression))),
      ),

    return_type: ($) => seq("->", $.type_expression),

    type_primary: ($) =>
      choice(
        $.function_type,
        $.unit_type,
        $.tuple_type,
        $.parenthesized_type,
        $.type_path,
      ),

    function_type: ($) =>
      seq(
        "Fn",
        "(",
        optional(commaSep1($.type_expression)),
        optional(","),
        ")",
        optional($.capability_list),
        "->",
        $.type_expression,
      ),

    type_path: ($) =>
      prec.left(
        seq(
          field("head", $.upper_identifier),
          repeat(seq(".", field("member", $.upper_identifier))),
          optional(field("type_arguments", $.type_arguments)),
        ),
      ),

    type_arguments: ($) => seq("[", optional(commaSep1($.type_expression)), optional(","), "]"),

    binding_pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.unit_pattern,
        $.lower_identifier,
        $.tuple_pattern,
        $.struct_pattern,
        $.array_pattern,
        $.parenthesized_pattern,
      ),

    struct_pattern: ($) =>
      seq("{", optional(commaSep1($.struct_pattern_field)), optional(","), "}"),

    struct_pattern_field: ($) =>
      choice(
        seq(field("name", $.lower_identifier), ":", field("pattern", $.pattern)),
        field("name", $.lower_identifier),
        prec(20, ".."),
      ),

    primary_expression: ($) =>
      choice(
        $.identifier_expression,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.string_literal,
        $.interpolated_string,
        $.path_literal,
        $.interpolated_path_literal,
        $.array_expression,
        $.record_expression,
        $.map_expression,
        $.unit_expression,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block,
        $.import_expression,
        $.fail_expression,
        $.method_adapter_expression,
        $.pipe_placeholder,
        $.dollar_identifier,
      ),

    identifier_expression: ($) => choice($.lower_identifier, $.upper_identifier),

    integer_literal: ($) => /\d(?:[\d_]*\d)?/,

    boolean_literal: ($) => choice("true", "false"),

    string_literal: ($) =>
      seq(
        "\"",
        repeat(choice($.escape_sequence, alias(token.immediate(/[^"\\\n]+/), $.string_content))),
        "\"",
      ),

    block: ($) => seq("{", optional($.statement_list), "}"),

    spread_expression: ($) => prec.right(20, seq("..", $.expression)),

    update_body: ($) => seq("{", optional(commaSep1($.update_field)), optional(","), "}"),

    update_field: ($) =>
      choice(
        seq(field("path", $.field_path), ":", field("value", $.expression)),
        seq(":", field("shorthand", $.field_path), "with", field("value", $.update_body)),
        seq("..", field("spread", $.expression)),
      ),

    field_path: ($) =>
      seq($.lower_identifier, repeat(seq(".", $.lower_identifier))),

    index_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(field("value", $._postfix_target), $._immediate_l_bracket, field("index", $.expression), "]"),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("value", $._postfix_target),
          $._immediate_dot,
          field("field", choice($.lower_identifier, $.upper_identifier, $.tuple_index)),
        ),
      ),

    _postfix_target: ($) =>
      choice(
        $.primary_expression,
        $.field_expression,
        $.index_expression,
        $.invocation_expression,
        $.fallible_expression,
      ),

    comparison_expression: ($) =>
      prec.left(PREC.comparison, seq($.expression, choice("<", "<=", ">", ">="), $.expression)),

    additive_expression: ($) =>
      prec.left(PREC.additive, seq($.expression, choice("+", "-"), $.expression)),

    closure_parameter_clause: ($) =>
      seq("(", optional(commaSep1($.binding_pattern)), optional(","), ")"),

    arrow_closure: ($) =>
      prec.right(seq(field("parameters", $.closure_parameter_clause), "=>", field("body", $.expression))),

    dollar_identifier: ($) => /\$[0-9]*/,

    _immediate_l_bracket: ($) => token.immediate("["),

    _immediate_dot: ($) => token.immediate("."),

    lower_identifier: ($) => /(?:[a-z][A-Za-z0-9_]*|_[A-Za-z0-9_]+)/,

    upper_identifier: ($) => /[A-Z][A-Za-z0-9_]*/,
  },
});

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
